[tool.poetry]
name = "lm-pseudoperplexity-evaluation"
version = "0.1.0"
description = ""
authors = ["dt4h"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.3.2"
torch = "^2.6.0"
transformers = "^4.49.0"
pandas = "^2.2.3"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
